# dataplateform

./: .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluffignore  .yamllint.yml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
data-quality/: README.md  init_validation_tables.sql
data-quality/great_expectations/: .gitignore  great_expectations.yml
data-quality/great_expectations/checkpoints/: full_pipeline_checkpoint.yml  marts_checkpoint.yml  raw_data_checkpoint.yml  staging_checkpoint.yml
data-quality/great_expectations/plugins/: __init__.py  custom_expectations.py  reporting.py  validation_store.py
data/input/: transactions_20240101.json
docs/: README.md  airflow-setup.md  architecture.md  ci-cd.md  dag-development-guide.md  data-flow.md  data-governance-guide.md  developer-guide.md  ingestion-patterns.md  minio-setup.md  monitoring-guide.md  storage-patterns.md  superset-guide.md  user-guide.md
docs/data-catalog/: column-documentation-template.md  data-product-template.md  dataset-template.md  glossary-term-template.md
docs/runbooks/: README.md  adding-data-sources.md  creating-pipelines.md  troubleshooting.md
docs/tutorial/: README.md  getting-started-tutorial.md  glossary.md  quick-reference.md
infrastructure/airflow/: Dockerfile  airflow.cfg  init-connections.sh  requirements.txt
infrastructure/alerting/: alert_config.yaml  slack_templates.py
infrastructure/alerting/email_templates/: data_quality_failure.html  platform_health.html  (+2 more)
infrastructure/minio/: init-buckets.sh
infrastructure/postgres/: init_dbt_schemas.sql  init_ingestion_tables.sql  init_monitoring_tables.sql  init_openmetadata_db.sql  init_superset_db.sql
infrastructure/superset/: README.md  docker-entrypoint.sh  import_dashboards.py  init-superset.sh  setup_database.py  setup_monitoring_dashboard.py  setup_roles.py
pipelines/: __init__.py
pipelines/config/: connections.yaml  logging.yaml  pipeline_config.py
pipelines/ingestion/: __init__.py  database_ingestor.py  file_ingestor.py  metadata_logger.py  schema_detector.py  watermark_manager.py
pipelines/loaders/: minio_to_postgres.py
pipelines/operators/: __init__.py  data_quality_operator.py  dbt_operator.py  file_sensor_operator.py  ge_operator.py  loader_operator.py  minio_operator.py  monitoring_operator.py  postgres_operator.py
pipelines/tests/: __init__.py  conftest.py  test_dags.py  test_database_ingestor.py  test_file_ingestor.py  test_metadata_logger.py  test_monitoring.py  test_operators.py  test_schema_detector.py  test_storage.py  test_watermark_manager.py
pipelines/utils/: __init__.py  alerting.py  logging_config.py  minio_client.py  postgres_client.py  storage.py
scripts/: deploy.sh  generate_sample_input.py  run-tests.sh  upload_sample_data.py  verify_buckets.py  verify_superset_setup.py
transformations/dbt_project/: .sqlfluff  dbt_project.yml  profiles.yml
(+60 files in other folders)
